--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "rest-apis-with-express",
   "version": "1.0.0",
   "description": "Treehouse Course",
-  "main": "index.js",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "importEXT": "if [ -f vscode-extensions.txt ]; then cat vscode-extensions.txt | xargs -n 1 code --install-extension; fi",
     "exportEXT": "code --list-extensions > vscode-extensions.txt",
-    "dev": "NODE_ENV=development nodemon index.js",
-    "prod": "NODE_ENV=production nodemon index.js",
+    "dev": "NODE_ENV=development nodemon app.js",
+    "prod": "NODE_ENV=production nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,5 +36,8 @@
   },
   "engines": {
     "node": "^10"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
